--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "firebase": "^8.2.9",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-chartkick": "^0.4.1",
     "react-dom": "^17.0.1",
     "react-numpad": "^5.1.3",
     "react-scripts": "4.0.3",
